[CSS Parser] Fix text-emphasis-position parsing https://bugs.webkit.org/show_bug.cgi?id=164197

Reviewed by Zalan Bujtas.

* css/parser/CSSParserFastPaths.cpp:
(WebCore::CSSParserFastPaths::isValidKeywordPropertyAndValue):
(WebCore::CSSParserFastPaths::isKeywordPropertyID):
* css/parser/CSSPropertyParser.cpp:
(WebCore::consumeTextEmphasisPosition):
(WebCore::CSSPropertyParser::parseSingleValue):



Canonical link: https://commits.webkit.org/181901@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208119 268f45cc-cd09-0410-ab3c-d52691b4dbfc